--- a/books.org
+++ b/books.org
@@ -34,5 +34,5 @@
       6) 坦然面对迷惑，坚持自己的判断；
       7) 每天克制自己的一件小事，自制； 8) 每天进步一点点。 
 *** 15. 《坂田攻击法》　剃刀手，电子计算机。攻击前，一定要选准要害。  
-*** DONE [#A] 16. 《Web 安全深度剖析》 安全漏洞，攻防测试。 DEADLINE: <2016-06-15 Wed>[100%]
+*** 16. DONE [#A] 《Web 安全深度剖析》 安全漏洞，攻防测试。 DEADLINE: <2016-06-15 Wed>[100%]
 CLOSED: [2016-06-16 Thu 15:54]
