* update readme org-mode

--- a/readme.org
+++ b/readme.org
@@ -1600,32 +1600,28 @@ mysql 查询
 现在脑子还晕着
 今天居然拿不下10k，真心难。但单位挺好的
 
-2015-04-23
+*** 2015-04-23
 -------------
 面试2： 
-(1)大数据，高并发的解决办法，数据库设计(10k以上必问!)
-(2)php的垃圾回收机制
-(3)计算一个字符串中某一个字符出现次数。
-(4)递归算法树形输出一个数据表的分类
-(5)自己熟知的开源框架，优缺点，最喜欢那一个？why?
-(6)&引用, 函数内使用global关键字
-(7)传值与引用的区别，应用场景。
-(8)===,==区别，举例说明==成立，===不成立的例子
-(9)魔术方法，并说明之。
-(10)常见的http状态码及分别表示什么？
-(11)详述自己项目中最有意思的问题。
++ 大数据，高并发的解决办法，数据库设计(10k以上必问!)
++ php的垃圾回收机制
++ 计算一个字符串中某一个字符出现次数。
++ 递归算法树形输出一个数据表的分类
++ 自己熟知的开源框架，优缺点，最喜欢那一个？why?
++ &引用, 函数内使用global关键字
++ 传值与引用的区别，应用场景。
++ ===,==区别，举例说明==成立，===不成立的例子
++ 魔术方法，并说明之。
++ 常见的http状态码及分别表示什么？
++ 详述自己项目中最有意思的问题。
 
-2015-04-22
+*** 2015-04-22
 --------------
 面试：
 (1) 输出上周一，格式"2015-03-01"
-
 (2) 截取网址后缀： “http://www.xxx.com/xxx/xxx.jpg”的多种方法
-
 ->
-
 a. substr('http://www.xxx.com/xxx/xxx.jpg', -1, 3)
-
 (3) 高并发，大数据访问，采取什么办法, 为什么采取这种办法
 ->
 配置高性能服务器
@@ -1635,12 +1631,10 @@ a. substr('http://www.xxx.com/xxx/xxx.jpg', -1, 3)
 使用不同主机分流主要流量
 使用流量分析统计软件
 (4) sort, asort, ksort的区别,并分别使用不同排序方法实现
-
 ->
 sort依据值从小到大排序，键值不参与排序
 asort依据值排序，键值参与排序
 ksort依据键值排序，值参与排序
-
 (5) 超链接之间如何传递数组, 
 ->
 答：先将数组转换成字符串，然后在目标脚本中在将字符串转换成数组，
@@ -1648,35 +1642,25 @@ $arg = implode(',', $names);
 echo $url = "localhost/m/index.php?names=".$arg;
 或者cookie, session
 表单传递，get, post方式
-
-
 <?php
 $var = ‘love you’;
 ?>
 <a href="<?php echo 'page02.php?new='.$var;?>">get</a>
-
 page02.php
 <?php
 echo $_GET['new'];
 ?>
-
 (6) 邮箱验证格式
 ->
 /^[a-z0-9]+([.+\\-]*[a-z0-9]*@([a-z0-9]+[a-z0-9]+.{1,63}[a-z0-9]+))$/
-
 (7) mysql日期区间格式，总数查询
-
 (8) linux每天自动备份指定文件到指定目录下，
-
 (9) ajax异步，同步的区别, 应用场景
 async:false为同步，
 同步：用户不能做任何操作，只能等待。直到有结果返回。
 异步：用户可以做任何操作，结果返回后，自动显示判断结果
-
 (10) 无限级分类的实现原理
-
 (11) 远程访问制定文件的两种方法
-
 ->
 a.$th = file_get_contents('http://www.yiqihd.com'); 
 if($th){
@@ -1690,27 +1674,22 @@ b.$th_2 = fopen('http://baidu.com');echo $th_2;
 
 注：file_get_contents()打开网页后，返回的是一个字符串，可以直接输出的
 c.curl
-
 (12) 介绍自己最得意的一个作品，如何与团队解决最难的问题的
-
 (13) 自己熟悉的一个开源框架，该框架采用什么设计模式，作者如何使用该框架的
-
-
-
-2015-04-18
+*** 2015-04-18
 ---------------
 开始回归!
-2015-04-14
+*** 2015-04-14
 ----------------
 这十来天不写代码，感觉手闲不住。有开始码农的生活了。
-2015-04-03
+*** 2015-04-03
 -----------------
 出去走两天。到深圳的山上看看这个城市。
-2015-0330
+*** 2015-0330
 -----------------
 落下了两天。重新上路.
 
-20150326
+*** 20150326
 ------------------
 什么是好的视图引擎？
 1.基于该引擎开发出的模板要更贴近标准的html等
@@ -1719,79 +1698,45 @@ c.curl
 4.扩展性好
 5.网络资源多
 
-20150325
+*** 20150325
 ------------------
 (1)MVC
-
 M 从数据库取出数据
 V 直观看到的web页面
 C 向系统发送命令和工具
-
 (Model View Controllers)是一种软件设计典范， 用一种业务逻辑和数据显示分离的方法组织代码， 将业务逻辑聚集到一个部件里面，在界面和和用户围绕数据的交互能被改进和个性化定制的同时而不需要重新编写业务逻辑
-
 mvc 有利于业务分工
-
 mvc 有利于代码重用
-
 MVC 的运行原理
-
 第一： 浏览者 -> 调用控制器，发出指令
-
 第二： 控制器 -> 按指令选取一个合适的模型
-
 第三： 模型   -> 按控制器指令取相应数据
-
 第四： 控制器 -> 按指令选取相应视图
-
 第五： 视图   -> 把第三步取到的数据按用户想要的样子显示出来
-
 单一入口机制 index.php?xxx, 指在一个web应用程序中，所有的请求都指向一个脚本文件. 使维护更方便
-
-20150324
+*** 20150324
 ------------------
 (1)
 df 查看磁盘空间 df -lahHT
 du 统计磁盘上的文件大小
 不加参数， 遍历当前文件夹所有文件夹目录
-
 -b 以byte为单位
-
 -k 以KB
-
 -m 以MB
-
 -h 按照1024进制以最合适的单位统计文件
-
 -h 按照1000进制以最合适的单位统计文件
-
 -s 制定统计目标
-
-
 (2) 分区
 第一 主分区和扩展分区总数不能超过四个
-
 第二 扩展分区最多只能有一个
-
 第三 扩展分区不能直接存取数据 (扩展分区内部划分逻辑分区才能存取数据)
-
-
 当硬盘空间消耗殆尽时怎么办？
-
 办法： 
 在保留原硬盘的基础上，给服务器添加新的硬盘
 
-
 (3)必须对硬盘进行分区，格式化，挂载后才能使用
 fdisk  要加参数才起作用 , fsisk需要根用户权限
--b
--c
--h
--l
-.
-.
-.
--H
--s
+-bchlHs
 fdisk /dev/sdb   进入分区指令
 
 (4)分区模式之 MBR
@@ -1836,12 +1781,10 @@ free 查看硬盘使用情况
 语言都是相通的，JMeter是用java开发的
 
 (3)JMeter是apache组织开发的，模拟大并发的开源工具
-
 ->  sampler  采样
 ->  thread
-
 (4)JMeter.apache.org 下载
-20150318
+*** 20150318
 -------------------
 sysstat命令之IO监控 sar -b -f sa18
 sysstat命令之CPU监控 sar -B -f sa18
@@ -1857,20 +1800,17 @@ fio -filename=/data/test -direct=1 -iodepth 1 -thread =rw=randrw -ioengine=psync
 - MongoDB(NoSQL)
 - TCP
 -Others
-20150316
+*** 20150316
 --------------------
 要改变。
 
-20150314
+*** 20150314
 ---------------------
 - sysstat
-
 sar 命令
 sar --help查看帮助
-
 例子 -> sar -q -f sa08
 -> sar -p -f sa25
-
 PRI(new) = PRI(old) + nice
 
 *** 2015-03-13
@@ -2068,17 +2008,11 @@ process4
     1) 多使用PHP内置变量，常量，函数
 
 *** 2015-03-08
-
 东西多了，得分清急所，大场。
-
 *** 2015-03-04
-
 新的一天来了，哈哈
-
 *** 2015-03-02
-
 经理既然快辞职，那我得把dob2b的精华学一下。
-
 *** 2015-02-10
 
 + 通信数据标准格式： code状态码, message,data
@@ -2097,32 +2031,21 @@ process4
 + xml节点不能是数字//<0>4</0>
 + php生成缓存，获取缓存，删除缓存
 *** 2015-02-09
-
 php面向对象 
 app
-
 *** 2015-02-06
-
 还是差太多啊。真的应该出自己的产品。
-
 *** 2015-02-03
-
 show variables like "%log%";
 开启慢查询日志：
 set global show_query_log=on;
 show variables like  "%slow%";
-
 *** 2015-02-02
-
 (1)总是朋友们帮我，当朋友有难时，我半点忙也帮不上。
-
 *** 2015-01-26
-
 貌似今天工作比较顺利，很快就把任务完成了。明天就可以开始手机板块了。争取年底前把大部分的工作完成掉。年后接新的项目。明年要做新的技术项目。把git和phalcon真正用到项目上。
 Phalcon比laravel的性能还要高出十倍。
-
 *** 2015-01-24
-
 对于php来说，了解它的运行机制，有助于我们写出高效健壮的代码，会更清楚程序的代码到底该怎么去写，如果是做php扩展，那了解它的运行机制就更是必须的了。
 + 运行环境：LAMP的A、M、P是如何互通工作的？
   - L：Linux/Windows（OS）
