--- a/readme.org
+++ b/readme.org
@@ -1340,76 +1340,58 @@ $row['username'] = str_replace($keywords, '<font color="red">'.$keywords.'</font
 *** 2015-04-22
 --------------
 面试：
-(1) 输出上周一，格式"2015-03-01"
-(2) 截取网址后缀： “http://www.xxx.com/xxx/xxx.jpg”的多种方法
-->
-a. substr('http://www.xxx.com/xxx/xxx.jpg', -1, 3)
-(3) 高并发，大数据访问，采取什么办法, 为什么采取这种办法
-->
-配置高性能服务器
-优化数据库访问
-禁止外部的盗链
-控制大文件的下载
-使用不同主机分流主要流量
-使用流量分析统计软件
-(4) sort, asort, ksort的区别,并分别使用不同排序方法实现
-->
-sort依据值从小到大排序，键值不参与排序
-asort依据值排序，键值参与排序
-ksort依据键值排序，值参与排序
-(5) 超链接之间如何传递数组, 
-->
-答：先将数组转换成字符串，然后在目标脚本中在将字符串转换成数组，
-$arg = implode(',', $names);
-echo $url = "localhost/m/index.php?names=".$arg;
-或者cookie, session
-表单传递，get, post方式
-<?php
-$var = ‘love you’;
-?>
-<a href="<?php echo 'page02.php?new='.$var;?>">get</a>
-page02.php
-<?php
-echo $_GET['new'];
-?>
-(6) 邮箱验证格式
-->
-/^[a-z0-9]+([.+\\-]*[a-z0-9]*@([a-z0-9]+[a-z0-9]+.{1,63}[a-z0-9]+))$/
-(7) mysql日期区间格式，总数查询
-(8) linux每天自动备份指定文件到指定目录下，
-(9) ajax异步，同步的区别, 应用场景
-async:false为同步，
-同步：用户不能做任何操作，只能等待。直到有结果返回。
-异步：用户可以做任何操作，结果返回后，自动显示判断结果
-(10) 无限级分类的实现原理
-(11) 远程访问制定文件的两种方法
-->
-a.$th = file_get_contents('http://www.yiqihd.com'); 
-if($th){
-while(!feof($th)){
-echo fgets($th);
-}
-}
-注：fopen()返回的只是一个资源，如果打开失败，本函数返回FALSE
++ 输出上周一，格式"2015-03-01"
++ 截取网址后缀： “http://www.xxx.com/xxx/xxx.jpg”的多种方法
+  a. substr('http://www.xxx.com/xxx/xxx.jpg', -1, 3)
++ 高并发，大数据访问，采取什么办法, 为什么采取这种办法
+  - 配置高性能服务器
+  - 优化数据库访问
+  - 禁止外部的盗链
+  - 控制大文件的下载
+  - 使用不同主机分流主要流量
+  - 使用流量分析统计软件
++ sort, asort, ksort的区别,并分别使用不同排序方法实现
+  - sort依据值从小到大排序，键值不参与排序
+  - asort依据值排序，键值参与排序
+  - ksort依据键值排序，值参与排序
++ 超链接之间如何传递数组, 
+  答：先将数组转换成字符串，然后在目标脚本中在将字符串转换成数组，
+  $arg = implode(',', $names);
+  echo $url = "localhost/m/index.php?names=".$arg;
+  或者cookie, session
+  表单传递，get, post方式
+  <?php $var = ‘love you’; ?> <a href="<?php echo 'page02.php?new='.$var;?>">get</a> page02.php <?php echo $_GET['new']; ?>
++ 邮箱验证格式
+  /^[a-z0-9]+([.+\\-]*[a-z0-9]*@([a-z0-9]+[a-z0-9]+.{1,63}[a-z0-9]+))$/
++ mysql日期区间格式，总数查询
++ linux每天自动备份指定文件到指定目录下，
++ ajax异步，同步的区别, 应用场景 (async:false为同步)
+  - 同步：用户不能做任何操作，只能等待。直到有结果返回。
+  - 异步：用户可以做任何操作，结果返回后，自动显示判断结果
++ 无限级分类的实现原理
++ 远程访问制定文件的两种方法
+  a. $th = file_get_contents('http://www.yiqihd.com'); if($th){while(!feof($th)){echo fgets($th);}} 注：fopen()返回的只是一个资源，如果打开失败，本函数返回FALSE
+  b. $th_2 = fopen('http://baidu.com');echo $th_2; 注：file_get_contents()打开网页后，返回的是一个字符串，可以直接输出的
+  c. curl
++ 介绍自己最得意的一个作品，如何与团队解决最难的问题的
++ 自己熟悉的一个开源框架，该框架采用什么设计模式，作者如何使用该框架的
 
-b.$th_2 = fopen('http://baidu.com');echo $th_2;
-
-注：file_get_contents()打开网页后，返回的是一个字符串，可以直接输出的
-c.curl
-(12) 介绍自己最得意的一个作品，如何与团队解决最难的问题的
-(13) 自己熟悉的一个开源框架，该框架采用什么设计模式，作者如何使用该框架的
 *** 2015-04-18
 ---------------
 开始回归!
+
 *** 2015-04-14
 ----------------
 这十来天不写代码，感觉手闲不住。有开始码农的生活了。
+
 *** 2015-04-03
 -----------------
 出去走两天。到深圳的山上看看这个城市。
+
 *** 2015-03-30
 -----------------
 落下了两天。重新上路.
+
 *** 2015-03-26
 ------------------
 什么是好的视图引擎？
