--- a/readme.org
+++ b/readme.org
@@ -1,6 +1,8 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE
 * emacs大法好
 ** 一年之内，学成emacs这套刀法。
+*** 2016-07-02 
++ determine to write a set of web go game
 *** 2016-06-24
 slowly when the start is very big (1000000, eg)
 + select * from test limit start, count;
