--- a/readme.org
+++ b/readme.org
@@ -1,6 +1,7 @@
-#+TODO: TODO IN_PROGRESS WAITING DONE
-* emacs大法好
-** 一年之内，学成emacs这套刀法。
+#+TODO: TODO IN_PROGRESS WAITING DONE * emacs大法好 ** 一年之内，学成emacs这套刀法。
+*** 
+    2016-07-02
+    + 历史上多少个瞬间都是本可以成为合作伙伴的，最后竟成了对手。
 *** 2016-07-02 
 + determine to write a set of web go game
 *** 2016-06-28
