--- a/readme.org
+++ b/readme.org
@@ -1,4 +1,6 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE * emacs大法好 ** 一年之内，学成emacs这套刀法。
+*** 2016-07-21
+   世界上最有成就感的事情就是创造或者毁灭一个事物，编程能做到这一点。
 *** 2016-07-19
    终端里面使用!command 然后tab查找最近的命令历史比ctrl+r还快
 *** 2016-07-15 
