--- a/readme.org
+++ b/readme.org
@@ -1,4 +1,4 @@
-#+TODO: TODO IN_PROGRESS WAITING DONE * emacs大法好 ** 一年之内，学成emacs这套刀法。
+#+TODO: TODO IN_PROGRESS WAITING DONE * emacs大法好 ** 一年之内，学成emacs这套刀法。y
 *** 2016-07-21
    世界上最有成就感的事情就是创造或者毁灭一个事物，编程能做到这一点。
 *** 2016-07-19
