--- a/readme.org
+++ b/readme.org
@@ -1,4 +1,6 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE * emacs大法好 ** 一年之内，学成emacs这套刀法。y
+*** 2016-07-24
+   原来php底层用了很多c语言的函数，比如strcat, strcmp, strcpy,等等, 认识事物，就是要追它的根源。
 *** 2016-07-21
    世界上最有成就感的事情就是创造或者毁灭一个事物，编程能做到这一点。
 *** 2016-07-19
