--- a/readme.org
+++ b/readme.org
@@ -592,7 +592,7 @@ install phpbrew to control  version of php. [[https://github.com/phpbrew/phpbrew
 
 *** 2016-01-12
 ------------------------------------------------------------------------
-lisp是什么样的语言？这个们进去会怎么样？看了《黑客与画家》， 很有冲动， 想钻进这道门里去。在知乎，百度，google， 各种途径里面去找它的点点滴滴， 迫切想找一个入口。
+lisp是什么样的语言？这个门进去会怎么样？看了《黑客与画家》， 很有冲动， 想钻进这道门里去。在知乎，百度，google， 各种途径里面去找它的点点滴滴， 迫切想找一个入口。
 这两天的事物很有冲击力：虾米的大气音乐， deepin系统的使用， 对lisp的着迷， 。。。。。。
 脑子充血了，反正。不管是什么路了。我冲下去了！
 
