--- a/books.org
+++ b/books.org
@@ -25,7 +25,7 @@
 	不管路走了多远,错了就要重新返回. -- 土耳其谚语
 ***** DONE 12. 《黑客与画家》(2016-01-16)
 	-- 对Lisp语言，以及编程语言有着非常独到的见解,是一本像孙子兵法那样的书籍
-***** IN_PROGRESS [#B] 13.  开始看Pratical Common Lisp (all English, a big challenge)
+***** WAITING [#B] 13.  开始看Pratical Common Lisp (all English, a big challenge)
 ***** DONE 14. 《尼采内心的八度定律》 
       1) 一切从了解自己开始， 找到自己的价值；
       2) 爱自己， 新鲜，充实自己；
@@ -35,6 +35,6 @@
       6) 坦然面对迷惑，坚持自己的判断；
       7) 每天克制自己的一件小事，自制； 8) 每天进步一点点。 
 ***** DONE 15. 《坂田攻击法》　剃刀手，电子计算机。攻击前，一定要选准要害。  
-***** 16. DONE [#A] 《Web 安全深度剖析》 安全漏洞，攻防测试。 DEADLINE: <2016-06-15 Wed>[100%]
+***** DONE [#A] 16.《Web 安全深度剖析》 安全漏洞，攻防测试。 DEADLINE: <2016-06-15 Wed>[100%]
 CLOSED: [2016-06-16 Thu 15:54]
 ***** IN_PROGRESS [#A] 17. C程序设计（第4版）
