--- a/readme.org
+++ b/readme.org
@@ -1,7 +1,8 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE * emacs大法好 
 ** 一年之内，学成emacs这套刀法。
 [[./photos/black_bird.jpg]]
-
+*** 2016-07-27 
+[[./todo.org][试一下相对路径能否解析]]
 *** 2016-07-26 
 I will use emacs and vim in a year.
 对比着学东西，就像吃不同味道的食物。更有食欲。既然指针比较有嚼劲， 我先吃点python水果。
