--- a/books.org
+++ b/books.org
@@ -38,3 +38,4 @@
 ***** DONE [#A] 16.《Web 安全深度剖析》 安全漏洞，攻防测试。 DEADLINE: <2016-06-15 Wed>[100%]
 CLOSED: [2016-06-16 Thu 15:54]
 ***** IN_PROGRESS [#A] 17. C程序设计（第4版）
+     都说指针是c语言的精髓，还是不太会用。
