* emacs skills pratice

--- a/readme.org
+++ b/readme.org
@@ -1,6 +1,8 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE * emacs大法好 
-** 一年之内，学成emacs这套刀法。
+** 一年之内，学成emacs这套刀法
 [[./photos/black_bird.jpg]]
+*** 2016-07-28 
+ + [[http://ergoemacs.org/emacs/emacs.html][emacs技巧]]
 *** 2016-07-27 
 [[./todo.org][试一下相对路径能否解析]]
 *** 2016-07-26 
