--- a/readme.org
+++ b/readme.org
@@ -6,7 +6,9 @@
  + [[http://ergoemacs.org/emacs/emacs.html][emacs技巧]]
  + *linum-mode* show number in current buffer like =set nu= in *vim* 
  + *global-linum-mode* show number all buffer 
- + if i want to  show number everytime emacs start, set (global-linum-mode 1) in .emacs init file  
+ + if i want to  show number everytime emacs start, set (global-linum-mode 1) in .emacs init file
+ + Select a text, then call copy-to-register 【Ctrl+x r s】, then type 3. This will store the text in register “3”.
+ + To paste, call insert-register 【Ctrl+x r i】, then type the register name.
 *** 2016-07-27 
 [[./todo.org][试一下相对路径能否解析]]
 *** 2016-07-26 
