--- a/readme.org
+++ b/readme.org
@@ -10,6 +10,8 @@
  + Select a text, then call copy-to-register 【Ctrl+x r s】, then type 3. This will store the text in register “3”.
  + To paste, call insert-register 【Ctrl+x r i】, then type the register name.
  + Call fill-paragraph *Alt+q* to break a long line into multiple lines
+ + *Ctrl+x f* to set the max characters per line used by “fill” commands.
+
 *** 2016-07-27 
 [[./todo.org][试一下相对路径能否解析]]
 *** 2016-07-26 
