--- a/readme.org
+++ b/readme.org
@@ -2,39 +2,39 @@
 ** 一年之内，学成emacs这套刀法
 [[./photos/black_bird.jpg]]
 *** 2016-07-29
-***** Kill-rectangle
+    ***** Kill-rectangle
     1. Put your cursor before somewords.
     2. Call /set-mark-command/ C-space.
     3. Move cursor to end of somewhere you want.
     4. Call /kill-rectangle/ by *C-x r k*
-***** Keplace-retangle 
+    ***** Keplace-retangle 
     1. Put your cursor before somewords.
     2. Call set-mark-command *C-space*.
     3. Move cursor to end of somewhere you want.
     4. Call /replace-rectangle/ *C-x r t*
-***** Paste Rectangle 
+    ***** Paste Rectangle 
     1. C-x r y 
-***** Insert a Column  of Numbers 
+    ***** Insert a Column  of Numbers 
     1. Put your cursor before somewords.
     2. Call /set-mark-command/ *C-space*.
     3. Move cursor to end of somewhere you want.
     4. Call /replace-rectangle/ *C-x r N*
-***** Insert A to Z   
-       A put your cursor before somewords.
+    ***** Insert A to Z   
+       + put your cursor before somewords.
        
-       B call /set-mark-command/ *C-space*.
+       + call /set-mark-command/ *C-space*.
        
-       C move cursor to end of somewhere you want.
+       + move cursor to end of somewhere you want.
        
-       D call /replace-rectangle/ *C-u*
+       + call /replace-rectangle/ *C-u*
        
-       E now call /rectangle-number-lines/. It will prompt you to enter arguments
+       + now call /rectangle-number-lines/. It will prompt you to enter arguments
        
-       F type 65 (Letter *A* has Unicode codepoint =65=. *a* is =97=).
+       + type 65 (Letter *A* has Unicode codepoint =65=. *a* is =97=).
        
-       G remove the default *%2d*, type *%c*(the "%c" is for character format)
+       + remove the default *%2d*, type *%c*(the "%c" is for character format)
 
-***** More Rectangle  Commands 
+    ***** More Rectangle  Commands 
     | Command                  | Key              | Purpose                                                            |
     | /delete-rectangle/       | *Ctrl+x r d*     | similar to /kill-rectangle/, but doesn't save to a special clipboard |
     | /clear-rectangle/        | *Ctrl+x r c*     | replace with space                                                 |
