--- a/readme.org
+++ b/readme.org
@@ -3,7 +3,8 @@
 [[./photos/black_bird.jpg]]
 *** 2016-08-01 
 + *select-editor* command can change crontab default editor 
-+ 可用crontab -e命令来编辑,编辑的是/var/spool/cron下对应用户的cron文件,也可以直接修改/etc/crontab文件
++ 可用 *crontab -e* 命令来编辑,编辑的是/var/spool/cron下对应用户的cron文件,也可以直接修改/etc/crontab文件
++ emacs align text(select the text, *Alt+x* command to call *align-regexp* then give "=")
 *** 2016-07-29
 ***** Kill-rectangle
     1. Put your cursor before somewords.
