--- a/readme.org
+++ b/readme.org
@@ -48,9 +48,9 @@
    
 *** 2016-07-28 
  + [[http://ergoemacs.org/emacs/emacs.html][emacs技巧]]
- + *linum-mode* show number in current buffer like =set nu= in *vim* 
- + *global-linum-mode* show number all buffer 
- + if i want to  show number everytime emacs start, set (global-linum-mode 1) in .emacs init file
+ + *linum-mode* show numbers in current buffer like =set nu= in *vim* 
+ + *global-linum-mode* show numbers all buffer 
+ + if i want to  show numbers everytime emacs start, set (global-linum-mode 1) in .emacs init file
  + Select a text, then call copy-to-register 【Ctrl+x r s】, then type 3. This will store the text in register “3”.
  + To paste, call insert-register 【Ctrl+x r i】, then type the register name.
  + Call fill-paragraph *Alt+q* to break a long line into multiple lines
