* 读更多书，行更多路

--- a/books.org
+++ b/books.org
@@ -39,3 +39,5 @@
 CLOSED: [2016-06-16 Thu 15:54]
 ***** IN_PROGRESS [#A] 17. C程序设计（第4版）
      都说指针是c语言的精髓，还是不太会用。
+     ***** 18. Python绝技
+     ***** 19. 玄玄棋经
