--- a/readme.org
+++ b/readme.org
@@ -4,6 +4,7 @@
 *** 2016-08-26 
 + 删除固定日期以前的文件
    *find logs -type f -mtime +5 -exec rm {  } \;*
++ emacs 中 *C-i* 等同于 *tab* , 用于 *eww* 模式中的下一个链接跳转
 *** 2016-08-14
 + 不可贪胜
 *** 2016-08-13
