--- a/readme.org
+++ b/readme.org
@@ -2,8 +2,8 @@
 ** 一年之内，学成emacs这套刀法
 
 ***** emacs快速工程内搜索
-+ 一种是安装 [[https://github.com/syohex/emacs-helm-ag][heml-ag]] 调起的快捷键很多，比如M-m s a p , 不得不多说，emacs真的是有很多快捷键，而且提示很人性。文档一流。
-+ 也可以通过C-c p 调起工程内的一些搜索方法， 如C-c p s g(project, search, grep),  
++ 一种是安装 [[https://github.com/syohex/emacs-helm-ag][heml-ag]] 调起的快捷键很多，比如 *M-m s a p* , 不得不多说，emacs真的是有很多快捷键，而且提示很人性。文档一流。
++ 也可以通过 *C-c p* 调起工程内的一些搜索方法， 如*C-c p s g* (project, search, grep),  
 ***** need to to learn [[https://github.com/reeze/tipi][TIPI]](PHP core)
 ***** emacs Macro Operation 
 | key   | target             |
