--- a/readme.org
+++ b/readme.org
@@ -1,5 +1,7 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE * emacs大法好 
 ** 一年之内，学成emacs这套刀法
+*** 2016-09-10 
++ 先定一个小目标,比如看一遍<深入理解php内核>
 *** 2016-09-09 
 + 大脑管理的主要工作是尽可能高效的利用知识存储
 *** 2016-09-08
