--- a/book.org
+++ b/book.org
@@ -40,3 +40,5 @@ CLOSED: [2016-06-16 Thu 15:54]
 ***** IN_PROGRESS [#A] 17. C程序设计（第4版）
 ***** IN_PROGRESS [#A] 18. python绝技:运用python成为顶级黑客
 ***** IN_PROGRESS [#B] 19. 玄玄棋经
+***** 20. 遥远的救世主 
+
