--- a/readme.org
+++ b/readme.org
@@ -1,7 +1,7 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE * emacs大法好 
 ** 一年之内，学成emacs这套刀法
 *** 2016-09-10 
-+ 先定一个小目标,比如看一遍<深入理解php内核>
++ 先定一个小目标,比如看一遍<深入理解php内核>，先屠他一条大龙。哦，已经两个小目标了。。。。。。
 *** 2016-09-09 
 + 大脑管理的主要工作是尽可能高效的利用知识存储
 *** 2016-09-08
