--- a/book.org
+++ b/book.org
@@ -41,4 +41,24 @@ CLOSED: [2016-06-16 Thu 15:54]
 ***** IN_PROGRESS [#A] 18. python绝技:运用python成为顶级黑客
 ***** IN_PROGRESS [#B] 19. 玄玄棋经
 ***** 20. 遥远的救世主 
-
+        + 文化属性
+        + 透视社会依次有三个层面：技术，制度和文化。小到一个人，大到一个国家一个民族，任何一种命运归根到底都是那种文化属性的产物。强势文化造就强者，弱势文化造就弱者，这就是规律，也可以理解为天道，不以人的意志为转移。
+        + 强势文化就是遵循事物规律的文化，弱势文化就是依赖强者的道德期望破格获取的文化，就是期望救世主的文化。强势文化在武学上被称为“秘籍”, 而弱势文化由于易学、易懂、易用，成了流行品种。
+        +　比如说文化产业，文学、影视是扒拉灵魂的艺术，如果文学、影视的创作能破解更高思维空间的文化密码，那么它的功效就是启迪人的觉悟、震撼人的灵魂，这就是众生所需，就是功德、市场、名利，精神拯救的暴利与毒品麻醉的暴利完全等值，而且不必像贩毒那样耍花招，没有心理成本和法律风险。 
+        + 没有主，主义、主意从哪里来？主无处不在，简单地说，支配人的价值取舍行为的那个东西就是主，就是文化属性。
+        + 文明对于不能以人字来界定的人无能为力。
+        + 死马当做活马医，再糟，死马还能再死一回吗？
+        + 股票的暴利并不产生与生产经营，而是产生与股票市场本身的投机性。它的运作动力是：把你口袋里的钱装到我的口袋里去。它的规则是：把大多数羊的肉填到极少数狼的嘴里。
+        + 法律机器的运作不以口供为条件。法律对程序和内容要求极限的严谨。
+        + 强盗的逻辑，直接获取，冒险，刺激。
+        + 强盗的本质是破格获取，破格获取和直接获取是两个不同的概念。你们没有自信与强者在同一个规则下公平竞争，这只能说明你是弱者，因为弱者文化所追求的最高价值就是破格获取。所以，强盗的逻辑从本质上讲是最懦弱的生存哲学。
+        + 拯救灵魂是《圣经》的买卖。
+        + 《圣经》的理由是：因信着得救了，上天堂；因不信有罪了，下地狱。用这种哄孩子的、吓汉子的方法让人去信，虽有利于基督教的实践，却也迎合了人的怕死的一面、贪婪的一面。这样的因果关系已经不给人以自觉、自省的机会，人连追求高尚的机会都没有，又何以高尚呢？
+        + 神是什么？神是根据人的需要造出来的。（容我仿一下：鬼是什么？鬼是根据人的恐惧造出来的。）
+        + 《圣经》神学是关于人类精神的学说，是关于人的灵魂净化、升华，人的行为高尚、正典的学说。一味地攻击或捍卫神的真实性与否，都是愚昧的表现。前者没有理解基督教的历史价值和社会价值，后者没有理解基督教的真正境界。
+        + 神是什么？神即道，道法自然，如来。
+        + 你不知道你，所以你是你，如果你知道了你，你就不是你了。
+        + 这世上原本就没什么神话，所谓的神话不过是常人的思维所不易理解的平常事。
+        + 无论做什么，市场都不是一块无限大的蛋糕。神话的实质就是强力作用的杀富济贫。这就可能产生两个问题，一是杀富是不是破坏性开采市场资源？二是让井底的人扒着井沿看了一眼再掉下去是不是让他患上精神绝症。
+        + 佛家常说“证到”这个词，却从来不告诉你“证到”后面是什么，因为欲说欲解都不能，因为条件的条件的条件，因为因果的因果的因果，所以就有了如人饮水冷暖自知。
+        + 这就是圆融世故，不显山不露水，各得其所。可品性这东西，今天缺个角、明天裂道缝，也就离塌陷不远了。
