* 遥远的救世主读后感

--- a/book.org
+++ b/book.org
@@ -35,8 +35,8 @@
       6) 坦然面对迷惑，坚持自己的判断；
       7) 每天克制自己的一件小事，自制； 8) 每天进步一点点。 
 ***** DONE 15. 《坂田攻击法》　剃刀手，电子计算机。攻击前，一定要选准要害。  
-***** DONE [#A] 16.《Web 安全深度剖析》 安全漏洞，攻防测试。 DEADLINE: <2016-06-15 Wed>[100%]
-CLOSED: [2016-06-16 Thu 15:54]
+***** DONE [#A] 16.《Web 安全深度剖析》 安全漏洞，攻防测试。 
+    CLOSED: [2016-06-16 Thu 15:54]
 ***** IN_PROGRESS [#A] 17. C程序设计（第4版）
 ***** IN_PROGRESS [#A] 18. python绝技:运用python成为顶级黑客
 ***** IN_PROGRESS [#B] 19. 玄玄棋经
@@ -44,7 +44,7 @@ CLOSED: [2016-06-16 Thu 15:54]
         + 文化属性
         + 透视社会依次有三个层面：技术，制度和文化。小到一个人，大到一个国家一个民族，任何一种命运归根到底都是那种文化属性的产物。强势文化造就强者，弱势文化造就弱者，这就是规律，也可以理解为天道，不以人的意志为转移。
         + 强势文化就是遵循事物规律的文化，弱势文化就是依赖强者的道德期望破格获取的文化，就是期望救世主的文化。强势文化在武学上被称为“秘籍”, 而弱势文化由于易学、易懂、易用，成了流行品种。
-        +　比如说文化产业，文学、影视是扒拉灵魂的艺术，如果文学、影视的创作能破解更高思维空间的文化密码，那么它的功效就是启迪人的觉悟、震撼人的灵魂，这就是众生所需，就是功德、市场、名利，精神拯救的暴利与毒品麻醉的暴利完全等值，而且不必像贩毒那样耍花招，没有心理成本和法律风险。 
+        + 比如说文化产业，文学、影视是扒拉灵魂的艺术，如果文学、影视的创作能破解更高思维空间的文化密码，那么它的功效就是启迪人的觉悟、震撼人的灵魂，这就是众生所需，就是功德、市场、名利，精神拯救的暴利与毒品麻醉的暴利完全等值，而且不必像贩毒那样耍花招，没有心理成本和法律风险。 
         + 没有主，主义、主意从哪里来？主无处不在，简单地说，支配人的价值取舍行为的那个东西就是主，就是文化属性。
         + 文明对于不能以人字来界定的人无能为力。
         + 死马当做活马医，再糟，死马还能再死一回吗？
@@ -62,3 +62,9 @@ CLOSED: [2016-06-16 Thu 15:54]
         + 无论做什么，市场都不是一块无限大的蛋糕。神话的实质就是强力作用的杀富济贫。这就可能产生两个问题，一是杀富是不是破坏性开采市场资源？二是让井底的人扒着井沿看了一眼再掉下去是不是让他患上精神绝症。
         + 佛家常说“证到”这个词，却从来不告诉你“证到”后面是什么，因为欲说欲解都不能，因为条件的条件的条件，因为因果的因果的因果，所以就有了如人饮水冷暖自知。
         + 这就是圆融世故，不显山不露水，各得其所。可品性这东西，今天缺个角、明天裂道缝，也就离塌陷不远了。
+        + 社会对公司的好感也是商业好处的一部分。这不是道德境界问题，是市场生存的法则问题。这种好感不仅仅是我们强行摊派价值观，也不仅仅是腐蚀我们自身的竞争力，更说明我们不是靠产品征服市场而是靠作秀混迹市场，这种违背商业属性的人文评价最终将葬送这个公司。
+        + 生存法则很简单，就是忍人所不能人，能人所不能。忍是一条线，能是一条线，两者的间距就是生存机会。如果我们忍人所不忍，能人所不能，咱们就比别人多了一些生存机会。市场的生存竞争非常残酷，胜负往往就在毫厘之间，两败俱伤你比他多一口气，你就是赢家。（暗合围棋屠龙对杀）
+        + 扬长避短，拾遗补缺，学会夹缝里面求生存。
+        + 公司必须以不断开拓市场和完善服务来抵御市场风险。
+        + 翻开历史看看，你从哪一行哪一页能找到救世主救世的记录。没有，从来就没有，从来都是救人的被救了，被救的救了人。如果一定要讲救世主的话，那么符合和代表客观规律的文化就是救世主。
+        + 扶贫的本质在一个扶字，如果你压根就没有打算自己站起来，老天爷来了都没用。
