--- a/book.org
+++ b/book.org
@@ -68,3 +68,15 @@
         + 公司必须以不断开拓市场和完善服务来抵御市场风险。
         + 翻开历史看看，你从哪一行哪一页能找到救世主救世的记录。没有，从来就没有，从来都是救人的被救了，被救的救了人。如果一定要讲救世主的话，那么符合和代表客观规律的文化就是救世主。
         + 扶贫的本质在一个扶字，如果你压根就没有打算自己站起来，老天爷来了都没用。
+        + 法无定法，存在决定意识。
+        + 悟 
+          悟道休言天命，
+          修行勿取真经。
+          一悲一喜一枯荣，
+          哪个前生注定？
+
+          袈裟本无清净，
+          红尘不染性空。
+          幽幽古刹千年钟，
+          都是痴人说梦。
+        + 所谓真经，就是能够打到寂空涅槃的究竟法门，可悟不可修。修为成佛，在求。悟为明性，在知。修行以行制性，悟道以性施行，觉者由心生律，修者以律制心。不落恶果者有信无证，住因住果，住念住心，如是生灭。不昧因果者无住而住，无欲无不欲，无戒无不戒, 如是涅槃。
