--- a/book.org
+++ b/book.org
@@ -42,10 +42,10 @@
 ***** IN_PROGRESS [#B] 19. 玄玄棋经
 ***** 20. 遥远的救世主 
         + 文化属性
-        + 透视社会依次有三个层面：技术，制度和文化。小到一个人，大到一个国家一个民族，任何一种命运归根到底都是那种文化属性的产物。强势文化造就强者，弱势文化造就弱者，这就是规律，也可以理解为天道，不以人的意志为转移。
+        + 透视社会依次有三个层面：*技术，制度和文化。小到一个人，大到一个国家一个民族，任何一种命运归根到底都是那种文化属性的产物。强势文化造就强者，弱势文化造就弱者，这就是规律，也可以理解为天道，不以人的意志为转移*。
         + 强势文化就是遵循事物规律的文化，弱势文化就是依赖强者的道德期望破格获取的文化，就是期望救世主的文化。强势文化在武学上被称为“秘籍”, 而弱势文化由于易学、易懂、易用，成了流行品种。
         + 比如说文化产业，文学、影视是扒拉灵魂的艺术，如果文学、影视的创作能破解更高思维空间的文化密码，那么它的功效就是启迪人的觉悟、震撼人的灵魂，这就是众生所需，就是功德、市场、名利，精神拯救的暴利与毒品麻醉的暴利完全等值，而且不必像贩毒那样耍花招，没有心理成本和法律风险。 
-        + 没有主，主义、主意从哪里来？主无处不在，简单地说，支配人的价值取舍行为的那个东西就是主，就是文化属性。
+        + 没有主，主义、主意从哪里来？主无处不在，简单地说，*支配人的价值取舍行为的那个东西就是主，就是文化属性*。
         + 文明对于不能以人字来界定的人无能为力。
         + 死马当做活马医，再糟，死马还能再死一回吗？
         + 股票的暴利并不产生与生产经营，而是产生与股票市场本身的投机性。它的运作动力是：把你口袋里的钱装到我的口袋里去。它的规则是：把大多数羊的肉填到极少数狼的嘴里。
@@ -56,20 +56,21 @@
         + 《圣经》的理由是：因信着得救了，上天堂；因不信有罪了，下地狱。用这种哄孩子的、吓汉子的方法让人去信，虽有利于基督教的实践，却也迎合了人的怕死的一面、贪婪的一面。这样的因果关系已经不给人以自觉、自省的机会，人连追求高尚的机会都没有，又何以高尚呢？
         + 神是什么？神是根据人的需要造出来的。（容我仿一下：鬼是什么？鬼是根据人的恐惧造出来的。）
         + 《圣经》神学是关于人类精神的学说，是关于人的灵魂净化、升华，人的行为高尚、正典的学说。一味地攻击或捍卫神的真实性与否，都是愚昧的表现。前者没有理解基督教的历史价值和社会价值，后者没有理解基督教的真正境界。
-        + 神是什么？神即道，道法自然，如来。
-        + 你不知道你，所以你是你，如果你知道了你，你就不是你了。
+        + 神是什么？*神即道，道法自然，如来*。
+        + *你不知道你，所以你是你，如果你知道了你，你就不是你了。*
         + 这世上原本就没什么神话，所谓的神话不过是常人的思维所不易理解的平常事。
         + 无论做什么，市场都不是一块无限大的蛋糕。神话的实质就是强力作用的杀富济贫。这就可能产生两个问题，一是杀富是不是破坏性开采市场资源？二是让井底的人扒着井沿看了一眼再掉下去是不是让他患上精神绝症。
         + 佛家常说“证到”这个词，却从来不告诉你“证到”后面是什么，因为欲说欲解都不能，因为条件的条件的条件，因为因果的因果的因果，所以就有了如人饮水冷暖自知。
         + 这就是圆融世故，不显山不露水，各得其所。可品性这东西，今天缺个角、明天裂道缝，也就离塌陷不远了。
         + 社会对公司的好感也是商业好处的一部分。这不是道德境界问题，是市场生存的法则问题。这种好感不仅仅是我们强行摊派价值观，也不仅仅是腐蚀我们自身的竞争力，更说明我们不是靠产品征服市场而是靠作秀混迹市场，这种违背商业属性的人文评价最终将葬送这个公司。
-        + 生存法则很简单，就是忍人所不能人，能人所不能。忍是一条线，能是一条线，两者的间距就是生存机会。如果我们忍人所不忍，能人所不能，咱们就比别人多了一些生存机会。市场的生存竞争非常残酷，胜负往往就在毫厘之间，两败俱伤你比他多一口气，你就是赢家。（暗合围棋屠龙对杀）
+        + 生存法则很简单，就是忍人所不能人，能人所不能。忍是一条线，能是一条线，两者的间距就是生存机会。如果我们忍人所不忍，能人所不能，咱们就比别人多了一些生存机会。市场的生存竞争非常残酷，胜负往往就在毫厘之间，*两败俱伤你比他多一口气，你就是赢家。*（暗合围棋屠龙对杀）
         + 扬长避短，拾遗补缺，学会夹缝里面求生存。
         + 公司必须以不断开拓市场和完善服务来抵御市场风险。
         + 翻开历史看看，你从哪一行哪一页能找到救世主救世的记录。没有，从来就没有，从来都是救人的被救了，被救的救了人。如果一定要讲救世主的话，那么符合和代表客观规律的文化就是救世主。
         + 扶贫的本质在一个扶字，如果你压根就没有打算自己站起来，老天爷来了都没用。
         + 法无定法，存在决定意识。
         + 悟 
+        
           悟道休言天命，
           
           修行勿取真经。
