* 遥远的救世主

--- a/book.org
+++ b/book.org
@@ -91,4 +91,34 @@
         + 佛乃觉性，非人，人人都有觉性不等于觉性就是人。人相可坏，觉性无生无灭，即觉即显,即障即尘弊，无障不显，了障涅槃。觉行圆满之佛乃佛教人像之佛，圆满即止，既非无量。若佛有量，即非阿弥陀佛。佛法无量即觉行无量，无圆无不圆，无满无不满，亦无是名究竟圆满。佛教以次第而分，从精深处说是得道天成的道法，道法如来不可思议，即非文化。从浅义处说是导人向善的教义，善恶本有人相、我相、众生相，即是文化。从众生处说是以贪治贪、以幻制幻的善巧，虽不灭败坏下流，却无碍抚慰灵魂的慈悲。
         + 坐，请坐，请上座。茶，上茶，上好茶。
         + 投石击水，不起浪花也泛涟漪，妙在以扶贫而命题。当有识之士骂你比强盗还坏的时候，责骂者，责即为诊，诊而不医，无异于断为绝症，非仁人志士所为，也背不起这更大的骂名。故而，责必论道。
-
+        + 传统观念的死结就在一个 *靠* 字上，在家靠父母，出门靠朋友，靠上帝、靠菩萨、靠皇恩。。。。。。总之靠什么都行，就是别靠自己。这是一个沉积了几千年的文化属性的问题，非几次新文化运动就能开悟。
+        + *大爱不爱*
+        + 弱势得救之道，也有也没有。没有竞争的社会就没有活力，而竞争必然会产生贫富、等级，此乃天道，乃社会进步的必然代价。无弱，强焉在？一个 *强*　字，　弱已经在其中了。故而，佛度心苦，修的是一个平常心。
+        + *释、道、儒* 是中国传统文化的三大体系。传统文化毕竟是以皇恩浩荡为先决条件的文化，讲的都是 *皆空、无为、中庸* 的理，以抑制个性而求生求解。
+        + 没有地狱，天堂焉在？总得有人在地狱呆着，咱们就算上一个，不然天堂就没有着落了。
+        + 天下之道论到极致，百姓的柴米油盐。人生冷暖论到极致，男人女人的一个 *情* 字。
+        + 佛说 *看山是山，看水是水*，我只是依佛法如实观照，看摩登女郎是摩登女郎，看红颜知己是红颜知己。
+        + 栏内是净，栏外是土，靠着栏杆就能抽烟。
+        + 有人、有枪、有地盘，还愁没有番号吗？
+        + 骆驼穿针的天堂(？没理解)
+        + 你信神吗？ *了妄唯真即是神*（了妄唯真?）了妄唯真,那神和人是什么关系？　*不一不异*
+        + 旅游就是意图，开阔眼界、增长见识就是意图。
+        + 想到了就做，该拿的拿该放的放，自性作为不昧因果。
+        + 从现象参到制度、参到文化，因为任何一种命运，归根到底都是那种文化的产物。
+        + 衡量一种文化属性不是看它沉淀的时间长短，而是看它与客观规律的距离远近。五千年的文化是光辉、是灿烂，这个没有问题，但是，传统和习俗得过过客观规律的筛子。
+        + 有文化和有什么文化不是一个概念。
+        + 不该作为的不作为就是作为，能活个明白就不错了。
+        + 好声本身的魅力已经足够了，不在需要无谓的修饰和点缀。
+        + 如果我的能力只能让我穷困潦倒，那穷困潦倒就是我的价值。
+        + 每个人的立场、观念、心态和思维模式不一样，获取的信息量和解读信息的方式也不一样。
+        + 好听就是艺术，知识每个人的好听标准不一样。
+        + 能做到实事求是的就是神话。能说老实话，能办老实事的人就是神。
+        + 神就是道，道就是规律,规律如来，容不得你思议，按规律办事的人就是什么。
+        + 人从根本上只面对两个问题：一是生存，得活下来；二是得回答生命价值的问题，让心有个安住。
+        + ５年之后我不嫌你老，你就可以不老了吗？５年以后我变成了一个色狼，值得你回头看一眼吗？
+    　　+ 不以求职应聘为生。要学位意义不大，应该什么有用学什么。
+        + 不管是文化艺术还是生存艺术，有道无术，术尚可求也。有术无道，止于术。
+        + 立志要高，挖掘要深。
+        + 外国不是我们家的厨房，不是我想进就进。有钱的男人也不是菜市场里的鸡蛋，不是我想抓一个就抓一个。
+        + 马太效应：你有，给你更多；你没有，把你原来的都拿走.
+        + 当人一旦从危险里跳出来，他就不再去关注这个事物的危险了，他的目光就会全部落在这个事物的利益人上，这就是人。
