* new book to read

--- a/book.org
+++ b/book.org
@@ -134,3 +134,5 @@
         + 外国不是我们家的厨房，不是我想进就进。有钱的男人也不是菜市场里的鸡蛋，不是我想抓一个就抓一个。
         + 马太效应：*你有，给你更多；你没有，把你原来的都拿走*
         + 当人一旦从危险里跳出来，他就不再去关注这个事物的危险了，他的目光就会全部落在这个事物的利益人上，这就是人。
+***** 中的精神 
+***** 官子大全 
